# promptc

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: good_first_issues.md
examples/bloated-demo/: README.md
examples/bloated-demo/.claude/skills/code-review/: SKILL.md
examples/bloated-demo/.claude/skills/legacy-rules/: SKILL.md
examples/bloated-demo/.claude/skills/python-style/: SKILL.md
examples/bloated-demo/.claude/skills/security/: SKILL.md
examples/bloated-demo/.claude/skills/sql-safety/: SKILL.md
examples/bloated-demo/.claude/skills/testing/: SKILL.md
scripts/: record_demo.md  record_demo.sh  validate_tokenizer.py
src/promptc/: cli.py  dedup.py  exposure.py  grade.py  models.py  normalizer.py  parser.py  report.py  scanner.py  tokens.py  views.py
src/promptc/templates/: report.css  report.html.j2
tests/: conftest.py  test_cli.py  test_dedup.py  test_exposure.py  test_grade.py  test_models.py  test_normalizer.py  test_parser.py  test_report.py  test_scanner.py  test_tokens.py
